@@ -5,8 +5,8 @@ EAPI=6
 
 inherit rpm
 
-DSC_x86="f/03/00/12/90/07/c3a7285b2e1d861f525301c00a04dea0f0bc0b6a"
-DSC_amd64="f/03/00/12/90/07/63fdab5c0f22d8f08937633831d4574aff8ad4f4"
+DSC_x86="f/03/00/12/97/37/449c76cdfbf1cca5f8fd0dddbc6aeea7c39d085d"
+DSC_amd64="f/03/00/12/97/37/ed70b5a38694681ca7df405654b271f366c93364"
 
 DESCRIPTION="Epson ESC/P-R 2 generic Inkjet Printer Driver binary package"
 HOMEPAGE="https://download.ebz.epson.net/dsc/search/01/search/?OSC=LX"
