@@ -1,6 +1,6 @@
 AUX bug_x86_64.patch 2428 BLAKE2B 2a6b8f6b9cba9694a5ff1909f5454ab6c3a3e19ef7706aa3f245991c2945b1ffe2f2a792fa85d14e2dd8cd5181eca9eed1b171c891f14c84d04b88cdfb8c097f SHA512 55cafa67de12daa9730e2aca3887b049dd52dd093e9f1609ea656165a67cd30bc1fc2b043c675f778a52e9e3fddce751f1b3533e31b7e6fbbbeede1cc25726ac
-DIST epson-inkjet-printer-escpr2-1.1.37.tar.gz 4239243 BLAKE2B 5972e1cf456938336503a11c2177c6ac9cf334023681159724415073728ffb2d95cdea55659712f06a75d7741ee1fc65b28628a3b01988e6c5cc3829fc4b3e4b SHA512 3e1a1a64a388413d77b942e83891f86fa721c8c2229a4df9b87e6238f8b5363128447145deb4ab7273b8a4962f1677c480c36ff27d60943a5d7b4014f40ad6e3
 DIST epson-inkjet-printer-escpr2-1.1.38.tar.gz 4256462 BLAKE2B 9db882bf58875a9e5a19422944188bbc7788db93360e9aefcc2ea4b8b3c40cbfdacea3f650289d9bd720287383af10cde86b18f16620e34e5ede3ad120437ce4 SHA512 b071461ca724f6d18f673a4d3da1760c702a915045863ca7a9a1444a3e705dbb4b07dc7ffd8de1fc8925b8abe3e8bd12ce9b8ee85376f9cc9055e72127df5326
-EBUILD epson-inkjet-printer-escpr2-1.1.37.ebuild 1319 BLAKE2B cce10e345ab474c45c26c1810920d14195b6fff096b018736a2c1c2ed144fb2eaa930d3a4159836f0f5e7781ba28a33bada06c5e86d1b02c9967cdec9a72c0e0 SHA512 570204e091b90a5cda19c75dbb99d115796671dbf7d94bc04d53e7d027e4ab05898fb24c3d23ba1d597791de2d45f66660d2cbfe2c36f1b5828588a5c468bbd2
+DIST epson-inkjet-printer-escpr2-1.1.39.tar.gz 4272989 BLAKE2B beca00ae5bd88ad444a8a10da482ab15d6e49198b1d932fd5efb4b2b9c1e864e564bb4baabc02eefc201baea1d962f40851c919770bea538ea9fb1b2b7b3cfcb SHA512 6e8cfe16c445dac090440385537f673a6c050d75d8086dfa7df6dfbf2e401103949b432161d5ebdcfb225ad748dad37905999ebec01c49f797a6225f8c579eed
 EBUILD epson-inkjet-printer-escpr2-1.1.38.ebuild 1319 BLAKE2B 983b7d5be967018e9310e19ae7e2619e36c363ecf7720ecdd05bd1157e359a7a8ddeb5d169f7477e7cb8293910543f6d6a85be4d5ebeaf1d08b51473f44ec51d SHA512 2503055daeb75ff103cd8ae47e65cbf31f683d825cdc402f8981036113d6bf19c103f5913521be9d41197a5317f3666ead1448470303d69a1217ad77840b75bc
+EBUILD epson-inkjet-printer-escpr2-1.1.39.ebuild 1319 BLAKE2B 01cce5fe8363546fd70e63eca67cf1d39466bd798716e2f4224a2b54c28e77744e86adf0d169684b1b6447a860bc172dfcdebb9434817007883740ef301a0a9c SHA512 7f3ae3c0f20bce618cc3b6151eaeebfcfe9450951616e79a4ce044d4befb1319be942dc503aad7c8bb8c20fbf6c44c4ed2067aaf8818c9303d58eef16d862963
 MISC metadata.xml 767 BLAKE2B f926930802184524574c0cc524e8a4e519c343041491770cd1ec74c356d2657c3c566948081a816c9e4d2924b4ad5162023336de0b1fe1ed7199106ed1f5dc86 SHA512 5e1183fe70cdf9cd2dac426a594750ee9733e4cbe9caac68ed028539589653bb6c10083397d234c53dbd1875520be1b2edc4078a117891b040975acd7fa840ac
