@@ -1,6 +1,16 @@
 NEWS -- an overview of user-visible changes with each release
 
 ----------------------------------------------------------------------
+epson-inkjet-printer-escpr2-1.1.39                        (2021-08-02)
+----------------------------------------------------------------------
+ * Supported new models
+
+----------------------------------------------------------------------
+epson-inkjet-printer-escpr2-1.1.38.1                      (2021-07-29)
+----------------------------------------------------------------------
+ * Supported new models
+
+----------------------------------------------------------------------
 epson-inkjet-printer-escpr2-1.1.38                        (2021-07-06)
 ----------------------------------------------------------------------
  * Supported new models
